--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/htl-perg-2018-19-4ahif/thesaurus-example-not-matthias#readme",
   "devDependencies": {
+    "tslint": "^5.11.0",
     "typescript": "^3.1.6"
   }
 }
