--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "thesaurus-example-not-matthias",
   "version": "1.0.0",
   "description": "A simple implementation of a command-line Thesaurus tool.",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc --outDir out src/index.ts && node out/index.js"
   },
   "repository": {
     "type": "git",
