--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
   },
-  "dependencies": {
-    "commander": "^2.19.0"
-  }
+  "dependencies": {}
 }
