--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "jasmine": "^3.3.0",
     "line-by-line": "^0.1.6",
     "node-line-reader": "0.0.2"
   }
